2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* md1format.xml, MonoDevelop.Projects.Formats.MD1/CmbxFileFormat.cs,
	  MonoDevelop.Projects.Formats.MD1/CombineConfiguration.cs,
	  MonoDevelop.Projects.Formats.MD1/CombineConfigurationEntry.cs,
	  MonoDevelop.Projects.Formats.MD1/CombineConfigurationSet.cs,
	  MonoDevelop.Projects.Formats.MD1/CombineStartupMode.cs,
	  MonoDevelop.Projects.Formats.MD1/MD1CustomDataItem.cs,
	  MonoDevelop.Projects.Formats.MD1/MD1FileFormat.cs,
	  MonoDevelop.Projects.Formats.MD1/MD1ProjectService.cs,
	  MonoDevelop.Projects.Formats.MD1/PrjxFileFormat.cs,
	  MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs,
	  MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectService.cs,
	  MonoDevelop.Projects.Formats.MSBuild/SlnFileFormat.cs,
	  MonoDevelop.Projects.mdp, MonoDevelop.Projects.Serialization,
	  MonoDevelop.Projects.Serialization/ArrayHandler.cs,
	  MonoDevelop.Projects.Serialization/ArrayListHandler.cs,
	  MonoDevelop.Projects.Serialization/ClassDataType.cs,
	  MonoDevelop.Projects.Serialization/CollectionDataType.cs,
	  MonoDevelop.Projects.Serialization/DataCollection.cs,
	  MonoDevelop.Projects.Serialization/DataContext.cs,
	  MonoDevelop.Projects.Serialization/DataIncludeAttribute.cs,
	  MonoDevelop.Projects.Serialization/DataItem.cs,
	  MonoDevelop.Projects.Serialization/DataItemAttribute.cs,
	  MonoDevelop.Projects.Serialization/DataNode.cs,
	  MonoDevelop.Projects.Serialization/DataSerializer.cs,
	  MonoDevelop.Projects.Serialization/DataType.cs,
	  MonoDevelop.Projects.Serialization/DataValue.cs,
	  MonoDevelop.Projects.Serialization/EnumDataType.cs,
	  MonoDevelop.Projects.Serialization/ExpandedCollectionAttribute.cs,
	  MonoDevelop.Projects.Serialization/GenericCollectionHandler.cs,
	  MonoDevelop.Projects.Serialization/ICollectionHandler.cs,
	  MonoDevelop.Projects.Serialization/ICustomDataItemHandler.cs,
	  MonoDevelop.Projects.Serialization/IExtendedDataItem.cs,